# Project-Gradius-GP-2Ba-INF-

./: .gitignore  CMakeLists.txt  Readme.txt  run.sh
resources/: settings.json
resources/levels/: first.json  second.json  test_level.json
src/: Game.cpp  Game.hpp  main.cpp
src/IO_handlers/: GameWindow.cpp  GameWindow.hpp
src/IOhandlers/: IOEvent.cpp  IOEvent.hpp  Keyboard.cpp  Keyboard.hpp  Mouse.cpp  Mouse.hpp  Sprite.cpp  Sprite.hpp  Text.cpp  Text.hpp  Window.cpp  Window.hpp
src/IOhandlers/IOEvent/: IOEvent.cpp  IOEvent.hpp  IOEventBase.cpp  IOEventBase.hpp  IOEventTranslator.hpp  KeyboardEvent.cpp  KeyboardEvent.hpp  MouseClickEvent.cpp  MouseClickEvent.hpp  MouseMoveEvent.cpp  MouseMoveEvent.hpp
src/MVC/: GameController.cpp  GameController.hpp  GameModel.cpp  GameModel.hpp  GameView.cpp  GameView.hpp
src/MVC/controller/: ControllerBase.cpp  ControllerBase.hpp  EnemyController.cpp  EnemyController.hpp  EntityController.cpp  EntityController.hpp  EntityControllerBase.cpp  EntityControllerBase.hpp  GameController.cpp  GameController.hpp  PlayerController.cpp  PlayerController.hpp
src/MVC/model/: BulletModel.cpp  BulletModel.hpp  DynEntityModel.cpp  DynEntityModel.hpp  EnemyModel.cpp  EnemyModel.hpp  EntityModel.cpp  EntityModel.hpp  GameModel.cpp  GameModel.hpp  ModelBase.cpp  ModelBase.hpp  ObstacleModel.cpp  ObstacleModel.hpp  PlayerModel.cpp  PlayerModel.hpp
src/MVC/view/: EnemyView.cpp  EnemyView.hpp  EntityView.cpp  EntityView.hpp  EntityViewBase.cpp  EntityViewBase.hpp  GameView.cpp  GameView.hpp  PlayerView.cpp  PlayerView.hpp  ViewBase.cpp  ViewBase.hpp
src/MVCcontroller/: ControllerBase.cpp  ControllerBase.hpp  GameController.hpp
src/MVCmodel/: ModelBase.cpp  ModelBase.hpp
src/MVCview/: ViewBase.cpp  ViewBase.hpp
src/entity/: Bullet.cpp  Bullet.hpp  DynamicEntity.cpp  DynamicEntity.hpp  Enemy.cpp  Enemy.hpp  EntityBase.cpp  EntityBase.hpp  EntityRepresentation.cpp  EntityRepresentation.hpp  FinishLine.cpp  FinishLine.hpp  Obstacle.cpp  Obstacle.hpp  Player.cpp  Player.hpp  ShootingEntity.cpp  ShootingEntity.hpp
src/event/: Event.hpp
src/exception/: BaseException.hpp  CoordTransformException.hpp  GameViewException.hpp  IOEventException.hpp  LevelException.hpp  SettingsException.hpp  SpriteException.hpp
src/level/: Level.cpp  Level.hpp  LevelEntity.cpp  LevelEntity.hpp  LevelParser.cpp  LevelParser.hpp
src/observer/: Event.cpp  Event.hpp  Observable.hpp  Observer.hpp
src/utils/: CoordTransform.cpp  CoordTransform.hpp  LoopTimer.cpp  LoopTimer.hpp  Settings.cpp  Settings.hpp  Singleton.hpp  StopWatch.cpp  StopWatch.hpp  Transformation.cpp  Transformation.hpp  Vec2D.cpp  Vec2D.hpp
